[package]
name = "foundry-common"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = """
Common utilities for foundry's tools.
"""
repository = "https://github.com/foundry-rs/foundry"

[dependencies]
# foundry internal
foundry-config = { path = "../config" }

# eth
ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }

# io
reqwest = { version = "0.11", default-features = false }

# cli
clap = { version = "3.0.10", features = [
    "derive",
    "env",
    "unicode",
    "wrap_help",
] }

#  misc
serde = "1.0.133"
serde_json = "1.0.67"
thiserror = "1.0.31"
eyre = "0.6"
