[package]
name = "foundry-common"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Common utilities for Foundry's tools"
repository = "https://github.com/foundry-rs/foundry"

[dependencies]
# foundry internal
foundry-config = { path = "../config" }

# eth
ethers-core = { workspace = true, default-features = false }
ethers-solc = { workspace = true, default-features = false }
ethers-providers = { workspace = true, default-features = false }
ethers-middleware = { workspace = true, default-features = false }
ethers-etherscan = { workspace = true, default-features = false, features = ["ethers-solc"] }

# io
reqwest = { version = "0.11", default-features = false }

# cli
clap = { version = "4.0", features = ["derive", "env", "unicode", "wrap_help"] }
comfy-table = "6.0.0"
tracing = "0.1"
atty = "0.2.14"
yansi = "0.5.1"
tempfile = "3.3.0"

#  misc
serde = "1.0.133"
serde_json = "1.0.67"
thiserror = "1.0.31"
eyre = "0.6"
walkdir = "2.3.2"
semver = "1.0.5"
once_cell = "1.13.1"
dunce = "1.0.2"
regex = "1.6.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
