[package]
name = "foundry-common"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Common utilities for Foundry's tools"
repository = "https://github.com/foundry-rs/foundry"

[dependencies]
# foundry internal
foundry-config = { path = "../config" }

# eth
ethers-core = { workspace = true }
ethers-solc = { workspace = true }
ethers-providers = { workspace = true }
ethers-middleware = { workspace = true }
ethers-etherscan = { workspace = true, features = ["ethers-solc"] }

# io
reqwest = { version = "0.11", default-features = false }

# cli
clap = { version = "4.2", features = ["derive", "env", "unicode", "wrap_help"] }
comfy-table = "6.1.4"
tracing = "0.1"
is-terminal = "0.4"
yansi = "0.5"
tempfile = "3.5"

#  misc
serde = "1.0.159"
serde_json = "1.0.95"
thiserror = "1.0.40"
eyre = "0.6"
walkdir = "2.3"
semver = "1.0.17"
once_cell = "1.17"
dunce = "1.0"
regex = "1.7"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
