[package]
name = "foundry-config"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Foundry configuration"
repository = "https://github.com/foundry-rs/foundry"
readme = "README.md"

[dependencies]
# eth
ethers-core = { workspace = true, default-features = false }
ethers-solc = { workspace = true, default-features = false, features = ["async", "svm-solc"] }
ethers-etherscan = { workspace = true, default-features = false }

# formats
Inflector = "0.11.4"
figment = { version = "0.10", features = ["toml", "env"] }
number_prefix = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_regex = "1.1.0"
toml = { version = "0.7", features = ["preserve_order"] }
toml_edit = "0.19"

# dirs
dirs-next = "2.0.0"
globset = "0.4.10"
walkdir = "2.3.3"

# encoding
open-fastrlp = "0.1.4"

# misc
eyre = "0.6.8"
regex = "1.7.3"
semver = { version = "1.0.17", features = ["serde"] }
tracing = "0.1"
once_cell = "1.17"
thiserror = "1.0"
reqwest = { version = "0.11", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
path-slash = "0.2.1"

[dev-dependencies]
pretty_assertions = "1.3.0"
figment = { version = "0.10", features = ["test"] }
tempfile = "3.5"
