[package]
name = "dapp"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dapp-utils = { path = "./../utils" }
dapp-solc = { path = "./../solc" }
evm-adapters = { path = "./../evm-adapters", default-features = false }

# ethers = { version = "0.5.2" }
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
svm = { package = "svm-rs", git = "https://github.com/roynalnaruto/svm-rs" }

eyre = "0.6.5"
semver = "1.0.4"
serde_json = "1.0.67"
serde = "1.0.130"
regex = { version = "1.5.4", default-features = false }
hex = "0.4.3"
glob = "0.3.0"
# TODO: Trim
tokio = { version = "1.10.1" }
tracing = "0.1.26"
tracing-subscriber = "0.2.20"

[dev-dependencies]
evm-adapters = { path = "./../evm-adapters", features = ["sputnik", "sputnik-helpers", "evmodin", "evmodin-helpers"] }
evmodin = { git = "https://github.com/vorot93/evmodin", features = ["util"] }
# evm = { version = "0.30.1" }
evm = { git = "https://github.com/gakonst/evm" }
