[package]
name = "dapptools"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.23"
dapp-utils = { path = "../utils" }
dapp-solc = { path = "../solc" }
dapp = { path = "../dapp" }
seth = { path = "../seth" }
evm-adapters = { path = "../evm-adapters" }
# ethers = "0.5"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
ethers-etherscan = { git = "https://github.com/gakonst/ethers-rs" }
eyre = "0.6.5"
rustc-hex = "2.1.0"
serde_json = "1.0.67"
tokio = { version = "1.11.0", features = ["macros"] }
regex = { version = "1.5.4", default-features = false }
ansi_term = "0.12.1"
rpassword = "5.0.1"
tracing-subscriber = "0.2.20"
tracing = "0.1.26"

## EVM Implementations
# evm = { version = "0.30.1" }
sputnik = { package = "evm", git = "https://github.com/rust-blockchain/evm",  optional = true }
evmodin = { git = "https://github.com/vorot93/evmodin", optional = true }
proptest = "1.0.0"
git2 = "0.13.22"
glob = "0.3.0"

[dev-dependencies]
tempdir = "0.3.7"

[features]
default = ["sputnik-evm", "evmodin-evm"]

sputnik-evm = [
    "sputnik",
    "evm-adapters/sputnik"
]

evmodin-evm = [
    "evmodin",
    "evmodin/util",
    "evm-adapters/evmodin",
    # needed to make the `HostExt` implementation for MockedHost accessible
    # to this package
    "evm-adapters/evmodin-helpers"
]

[[bin]]
name = "seth"
path = "src/seth.rs"
doc = false

[[bin]]
name = "dapp"
path = "src/dapp.rs"
doc = false
