[package]
name = "forge-doc"
version = "0.1.0"
edition = "2021"
description = """
Foundry's solidity doc parsing
"""
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
# foundry internal
foundry-common = { path = "../common" }
forge-fmt = { path = "../fmt" }

# ethers
ethers-solc = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["async"] }

# cli
clap = { version = "3.0.10", features = [
    "derive",
    "env",
    "unicode",
    "wrap_help",
] }

# misc
solang-parser = "=0.1.18"
eyre = "0.6"
thiserror = "1.0.30"
rayon = "1.5.1"
itertools = "0.10.3"
toml = "0.5"
auto_impl = "1"
derive_more = "0.99"

[dev-dependencies]
assert_matches = "1.5.0"
