[package]
name = "forge-doc"
version = "0.1.0"
edition = "2021"
description = """
Foundry's solidity doc parsing
"""
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
# foundry internal
foundry-common = { path = "../common" }
forge-fmt = { path = "../fmt" }
foundry-config = { path = "../config" }
foundry-utils = { path = "../utils" }

# ethers
ethers-solc = { workspace = true, features = ["async"] }
ethers-core = { workspace = true }

# cli
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }

# tracing
tracing = "0.1"

# mdbook
mdbook = { version = "0.4", default-features = false, features = ["search"] }
warp = { version = "0.3", default-features = false, features = ["websocket"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3"

# misc
solang-parser = "=0.2.4"
eyre = "0.6"
thiserror = "1"
rayon = "1"
itertools = "0.10"
toml = "0.7"
auto_impl = "1"
derive_more = "0.99"
once_cell = "1"
