[package]
name = "evm-adapters"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foundry-utils = { path = "./../utils" }

sputnik = { package = "evm", git = "https://github.com/rust-blockchain/evm",  optional = true, features = ["tracing"] }

evmodin = { git = "https://github.com/vorot93/evmodin",  optional = true }

ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["solc-full"] }
eyre = "0.6.5"
once_cell = "1.8.0"
tracing = "0.1.28"
bytes = "1.1.0"
tokio = { version = "1.12.0", features = ["rt-multi-thread", "macros"] }
hex = "0.4.3"
thiserror = "1.0.29"
proptest = "1.0.0"
parking_lot = "0.11.2"
futures = "0.3.17"
revm_precompiles = "0.1.0"

[dev-dependencies]
evmodin = { git = "https://github.com/vorot93/evmodin", features = ["util"] }
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["solc-full", "solc-tests"] }

[features]
sputnik-helpers = ["sputnik"]
evmodin-helpers = ["evmodin"]
