[package]
name = "evm-adapters"
version = "0.1.0"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foundry-utils = { path = "./../utils" }

sputnik = { package = "evm", git = "https://github.com/rust-blockchain/evm",  optional = true, features = ["tracing"] }

evmodin = { git = "https://github.com/vorot93/evmodin",  optional = true, features = ["util"] }

ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["solc-full"] }
ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
eyre = "0.6.5"
once_cell = "1.8.0"
tracing = "0.1.28"
bytes = "1.1.0"
tokio = { version = "1.12.0", features = ["rt-multi-thread", "macros"] }
hex = "0.4.3"
thiserror = "1.0.29"
proptest = "1.0.0"
parking_lot = "0.11.2"
futures = "0.3.17"
revm_precompiles = { git = "https://github.com/bluealloy/revm", default-features = false, features = ["k256_ecrecover"] }
serde_json = "1.0.72"
serde = "1.0.130"
ansi_term = "0.12.1"

# for evm config to be usable in clis
clap = { version = "3.0.6", features = [
    "derive",
    "env",
    "unicode",
    "wrap_help",
] }
clap_complete = "3.0.2"

[dev-dependencies]
evmodin = { git = "https://github.com/vorot93/evmodin", features = ["util"] }
ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["solc-full", "solc-tests"] }

[features]
sputnik-helpers = ["sputnik"]
evmodin-helpers = ["evmodin"]
