[package]
name = "foundry-evm"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/foundry-rs/foundry"
keywords = ["ethereum", "web3", "evm"]

[dependencies]
foundry-common = { path = "../common" }
foundry-config = { path = "../config" }
foundry-macros = { path = "../macros" }

# Encoding/decoding
serde_json = "1.0.67"
serde = "1.0.130"
hex = "0.4.3"
ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = [
  "solc-full",
  "abigen",
] }
jsonpath_lib = "0.3.0"

# Error handling
eyre = "0.6.5"
thiserror = "1.0.29"

# Logging
tracing = "0.1"

# Threading/futures
tokio = { version = "1", features = ["time", "macros"] }
parking_lot = "0.12.0"
futures = "0.3.21"
once_cell = "1.13"

# EVM
bytes = "1.1.0"
hashbrown = { version = "0.13", features = ["serde"] }
revm = { version = "2.3", default-features = false, features = [
  "std",
  "k256",
  "with-serde",
  "memory_limit",
  "optional_eip3607",
  "optional_block_gas_limit"
] }

# Fuzzer
proptest = "1.0.0"

# Display
yansi = "0.5.1"

# Misc
url = "2.2.2"
auto_impl = "1.0.1"
itertools = "0.10.5"
ordered-float = "3.3.0"

# Coverage
semver = "1.0.5"

[dev-dependencies]
foundry-utils = { path = "../utils" }
tempfile = "3.3.0"
