[package]
name = "foundry-evm"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/foundry-rs/foundry"
keywords = ["ethereum", "web3", "evm"]

[dependencies]
foundry-common = { path = "../common" }
foundry-config = { path = "../config" }
foundry-macros = { path = "../macros" }

# Encoding/decoding
serde_json = "1.0.95"
serde = "1.0.159"
hex = "0.4.3"
ethers = { workspace = true, features = ["solc-full", "abigen"] }
jsonpath_lib = "0.3.0"

# Error handling
eyre = "0.6.8"
thiserror = "1.0.40"

# Logging
tracing = "0.1"

# Threading/futures
tokio = { version = "1", features = ["time", "macros"] }
parking_lot = "0.12.1"
futures = "0.3.27"
once_cell = "1.17"

# EVM
bytes = "1.4.0"
hashbrown = { version = "0.13", features = ["serde"] }
revm = { version = "2.3", default-features = false, features = [
  "std",
  "k256",
  "with-serde",
  "memory_limit",
  "optional_eip3607",
  "optional_block_gas_limit",
] }

# Fuzzer
proptest = "1.1.0"

# Display
yansi = "0.5"

# Misc
url = "2.3.1"
auto_impl = "1.0.1"
itertools = "0.10.5"
ordered-float = "3.6.0"
walkdir = "2.3.3"

# Coverage
semver = "1.0.17"

[dev-dependencies]
foundry-utils = { path = "../utils" }
tempfile = "3.5"
