[package]
name = "foundry-evm"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/foundry-rs/foundry"
keywords = ["ethereum", "web3", "evm"]

[dependencies]
foundry-abi = { path = "../abi" }
foundry-common = { path = "../common" }
foundry-config = { path = "../config" }
foundry-macros = { path = "../macros" }

ethers = { workspace = true, features = ["ethers-solc"] }

# Encoding/decoding
serde_json = "1"
serde = "1"
hex = "0.4"
jsonpath_lib = "0.3"

# Error handling
eyre = "0.6"
thiserror = "1"

# Logging
tracing = "0.1"

# Threading/futures
tokio = { version = "1", features = ["time", "macros"] }
parking_lot = "0.12"
futures = "0.3"
once_cell = "1"

# EVM
bytes = "1"
hashbrown = { version = "0.13", features = ["serde"] }
revm = { version = "3", default-features = false, features = [
  "std",
  "serde",
  "memory_limit",
  "optional_eip3607",
  "optional_block_gas_limit",
  "optional_no_base_fee"
] }

# Fuzzer
proptest = "1"

# Display
yansi = "0.5"

# Misc
url = "2"
auto_impl = "1"
itertools = "0.10"
ordered-float = "3"
walkdir = "2"

# Coverage
semver = "1"

[dev-dependencies]
foundry-utils = { path = "../utils" }
tempfile = "3"
