[package]
name = "forge-fmt"
version = "0.2.0"
edition = "2021"
description = "Foundry's solidity formatting and linting support"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/foundry-rs/foundry"
keywords = ["ethereum", "web3", "solidity", "linter"]

[dependencies]
# foundry dep
foundry-config = { path = "../config" }

# ethers
ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }

# parser
solang-parser = "=0.2.2"

# misc
semver = "1.0.4"
itertools = "0.10.3"
thiserror = "1.0.30"
ariadne = "0.1.5"

[dev-dependencies]
pretty_assertions = "1.0.0"
itertools = "0.10.3"
toml = "0.5"
