[package]
name = "forge-fmt"
version = "0.2.0"
edition = "2021"
description = "Foundry's solidity formatting and linting support"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/foundry-rs/foundry"
keywords = ["ethereum", "web3", "solidity", "linter"]

[dependencies]
# foundry dep
foundry-config = { path = "../config" }

# ethers
ethers-core = { workspace = true, default-features = false }

# parser
solang-parser = "=0.2.4"

# misc
semver = "1.0.17"
itertools = "0.10.5"
thiserror = "1.0.40"
ariadne = "0.2"

[dev-dependencies]
pretty_assertions = "1.3.0"
itertools = "0.10.5"
toml = "0.7"
