[package]
name = "forge-fmt"
version = "1.0.0"
edition = "2021"
description = "Foundry's solidity formatting and linting support"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/foundry-rs/foundry"
keywords = ["ethereum", "web3", "solidity", "linter"]

[dependencies]
# foundry dep
foundry-config = { path = "../config" }

# ethers
ethers-core = { workspace = true }

# parser
solang-parser.workspace = true

# misc
semver = "1"
itertools = "0.10"
thiserror = "1"
ariadne = "0.2"
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1"
itertools = "0.10"
toml = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
