[package]
name = "forge-node-types"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
axum = "0.2.8"
erased-serde = "0.3"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
futures = "0.3"
http = "0.2"
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.67", features = ["raw_value"] }
