[package]
name = "forge"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
foundry-utils = { path = "./../utils" }
foundry-common = { path = "./../common" }
foundry-config = { path = "./../config" }
foundry-evm = { path = "./../evm" }

ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = [
    "solc-full",
] }
eyre = "0.6.5"
semver = "1.0.5"
serde_json = "1.0.67"
serde = "1.0.130"
regex = { version = "1.5.4", default-features = false }
hex = "0.4.3"
glob = "0.3.0"
yansi = "0.5.1"
# TODO: Trim down
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
proptest = "1.0.0"
rayon = "1.6.1"
rlp = "0.5.1"
once_cell = "1.13"
comfy-table = "6.0.0"
parking_lot = "0.12"

[dev-dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = [
    "solc-full",
    "solc-tests",
] }
foundry-utils = { path = "./../utils", features = ["test"] }
