[package]
name = "forge"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
foundry-utils = { path = "./../utils" }
foundry-common = { path = "./../common" }
foundry-config = { path = "./../config" }
foundry-evm = { path = "./../evm" }

ethers = { workspace = true, default-features = false, features = ["solc-full"] }
eyre = "0.6.8"
semver = "1.0.17"
serde_json = "1.0.95"
serde = "1.0.159"
regex = { version = "1.7.3", default-features = false }
hex = "0.4.3"
glob = "0.3.1"
yansi = "0.5"
# TODO: Trim down
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
proptest = "1.1.0"
rayon = "1.7.0"
rlp = "0.5.2"
once_cell = "1.17"
comfy-table = "6.1.4"
parking_lot = "0.12"

[dev-dependencies]
ethers = { workspace = true, default-features = false, features = ["solc-full", "solc-tests"] }
foundry-utils = { path = "./../utils", features = ["test"] }
