[package]
name = "forge"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
foundry-utils = { path = "./../utils" }
foundry-common = { path = "./../common" }
foundry-config = { path = "./../config" }
foundry-evm = { path = "./../evm" }

# TODO: Trim down
ethers = { workspace = true, features = ["solc-full"] }

comfy-table = "6"
eyre = "0.6"
glob = "0.3"
hex = "0.4"
once_cell = "1"
parking_lot = "0.12"
proptest = "1"
rayon = "1"
regex = { version = "1", default-features = false }
rlp = "0.5"
semver = "1"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
yansi = "0.5"

[dev-dependencies]
ethers = { workspace = true, features = ["solc-full", "solc-tests", "rustls"] }
foundry-utils = { path = "./../utils" }
