[package]
name = "foundry-macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/foundry-rs/foundry"

[dependencies]
foundry-macros-impl = { path = "./impl" }
foundry-common = { path = "../common" }

ethers-core = { workspace = true }
