[package]
name = "foundry-macros"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/foundry-rs/foundry"

[dependencies]
foundry-macros-impl = { path = "./impl" }

ethers-core = { workspace = true }
serde = "1.0"
serde_json = "1.0"
