[package]
name = "foundry-sand"
version = "0.1.0"
edition = "2021"
description = """
starknet tooling for foundry
"""

[dependencies]
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
thiserror = "1.0.30"
tracing = "0.1.30"
ethers-solc = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
