[package]
name = "seth"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dapp-utils = { path = "../utils" }
# ethers = "0.5"
ethers-core = { git = "https://github.com/gakonst/ethers-rs", branch = "master", default-features = false }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs", branch = "master", default-features = false }
eyre = "0.6.5"
rustc-hex = "2.1.0"
serde_json = "1.0.67"
