[package]
name = "seth"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dapp-utils = { path = "../utils" }
ethers-core = "^0.5.0"
ethers-providers = { version = "^0.5.0", default-features = false }
eyre = "0.6.5"
rustc-hex = "2.1.0"
serde_json = "1.0.67"
chrono = "0.2"
