[package]
name = "foundry-tests"
description = "Foundry testing utilities"
publish = false

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
foundry-config.workspace = true
foundry-common.workspace = true

ethers.workspace = true
ethers-solc = { workspace = true, features = ["project-util"] }

eyre = "0.6"
once_cell = "1"
parking_lot = "0.12"
pretty_assertions = "1"
regex = "1"
serde_json = "1"
tempfile = "3"
walkdir = "2"

[dev-dependencies]
# foundry internal
forge-fmt.workspace = true
forge-doc.workspace = true
foundry-utils.workspace = true
forge.workspace = true
foundry-config.workspace = true
foundry-common.workspace = true
foundry-evm.workspace = true
cast.workspace = true
ui.workspace = true

# eth
ethers = { workspace = true, features = ["ledger", "trezor"] }
ethers-signers = { workspace = true, features = ["aws"] }
solang-parser.workspace = true
eth-keystore = "0.5"

# cli
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4"
clap_complete_fig = "4"
yansi = "0.5"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt"] }
tracing = "0.1"
watchexec = "2"
comfy-table = "6"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls",
    "rustls-tls-native-roots",
] }
dotenvy = "0.15"
dialoguer = { version = "0.10", default-features = false }

# async / parallel
tokio = { version = "1", features = ["macros"] }
futures = "0.3"
rayon = "1"
async-trait = "0.1"

# disk / paths
walkdir = "2"
dunce = "1"
path-slash = "0.2"
tempfile = "3"

# aws
rusoto_core = { version = "0.48", default-features = false }
rusoto_kms = { version = "0.48", default-features = false }

# misc
eyre = "0.6"
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = { version = "1", default-features = false }
rpassword = "7"
hex = { workspace = true, features = ["serde"] }
itertools.workspace = true
proptest = "1"
semver = "1"
once_cell = "1"
similar = { version = "2", features = ["inline"] }
strsim = "0.10"
bytes = "1.4"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1"
indicatif = "0.17"
parking_lot = "0.12"

anvil.workspace = true
pretty_assertions = "1"
toml = "0.7"
serial_test = "2"
criterion = "0.4"
svm = { package = "svm-rs", version = "0.3", default-features = false, features = ["rustls"] }
globset = "0.4"

[features]
# feature for integration tests that test external projects
external-integration-tests = []
