[package]
name = "ui"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/foundry-rs/foundry"
keywords = ["ethereum", "web3", "evm", "debugger"]

[dependencies]
crossterm = "0.22.1"
tui = { version = "0.16.0", default-features = false, features = ["crossterm"] }
eyre = "0.6.5"
hex = "0.4.3"
ethers = { workspace = true }
forge = { path = "../forge" }
revm = { version = "2.3", features = ["std", "k256", "with-serde"] }
foundry-common = { path = "../common" }
