[package]
name = "ui"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/foundry-rs/foundry"
keywords = ["ethereum", "web3", "evm", "debugger"]

[dependencies]
forge = { path = "../forge" }
foundry-common = { path = "../common" }
cast = { path = "../cast" }

ethers = { workspace = true }
ethers-solc = { workspace = true }

crossterm = "0.26"
eyre = "0.6"
hex = "0.4"
revm = { version = "3", features = ["std", "serde"] }
tui = { version = "0.19", default-features = false, features = ["crossterm"] }
bytes = "1.4"
tracing = "0.1"
