[package]
name = "foundry-utils"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/foundry-rs/foundry"

[dependencies]
ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-contract = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = [
    "abigen",
] }
ethers-etherscan = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-addressbook = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
], optional = true }

forge-fmt = { path = "../fmt" }

eyre = { version = "0.6.5", default-features = false }
hex = "0.4.3"
reqwest = { version = "0.11.8", default-features = false, features = ["json", "rustls"] }
rustc-hex = { version = "2.1.0", default-features = false }
serde = "1.0.132"
serde_json = { version = "1.0.67", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rlp = "0.5.1"
futures = "0.3.17"
tracing = "0.1"
once_cell = "1.13"
rand = "0.8"
glob = "0.3.0"

[dev-dependencies]
foundry-common = { path = "./../common" }
ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = [
    "solc-full",
] }
pretty_assertions = "1.0.0"

[features]
test = ["tracing-subscriber"]
