[package]
name = "foundry-utils"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/foundry-rs/foundry"

[dependencies]
forge-fmt = { path = "../fmt" }

ethers-core = { workspace = true }
ethers-contract = { workspace = true, features = ["abigen"] }
ethers-etherscan = { workspace = true }
ethers-addressbook = { workspace = true }
ethers-providers = { workspace = true }
ethers-solc = { workspace = true }

tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
], optional = true }
eyre = { version = "0.6.8", default-features = false }
hex = "0.4.3"
reqwest = { version = "0.11.16", default-features = false, features = ["json", "rustls"] }
rustc-hex = { version = "2.1.0", default-features = false }
serde = "1.0.159"
serde_json = { version = "1.0.95", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rlp = "0.5.2"
futures = "0.3.27"
tracing = "0.1"
once_cell = "1.17"
rand = "0.8"
glob = "0.3.1"

[dev-dependencies]
foundry-common = { path = "./../common" }
ethers = { workspace = true, features = ["solc-full"] }
pretty_assertions = "1.3.0"

[features]
test = ["tracing-subscriber"]
