[package]
name = "foundry-utils"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/foundry-rs/foundry"

[dependencies]
forge-fmt = { path = "../fmt" }

ethers-core = { workspace = true }
ethers-contract = { workspace = true, features = ["abigen"] }
ethers-etherscan = { workspace = true }
ethers-addressbook = { workspace = true }
ethers-providers = { workspace = true }
ethers-solc = { workspace = true }

eyre = { version = "0.6", default-features = false }
futures = "0.3"
glob = "0.3"
hex = "0.4"
once_cell = "1"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls"] }
rlp = "0.5"
rustc-hex = { version = "2", default-features = false }
serde = "1"
serde_json = { version = "1", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"

[dev-dependencies]
foundry-common = { path = "./../common" }
ethers = { workspace = true, features = ["solc-full"] }
pretty_assertions = "1.3.0"
